<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">曼聯通優惠</string>
    <string name="service">特約商店主動通知</string>
    <string name="shareButton">我要分享App</string>
    <string name="keyRecommedn">輸入推薦碼</string>
    <string name="saveButton">儲存設定</string>
    <string name="scanner">QRcode掃描</string>
    <string name="scanner2">顯示使用次數</string>
    <string name="lottery">登入資料抽獎!</string>
    <string name="scanner_success">掃描成功!</string>
    <string name="scanner_failed">掃描失敗</string>
    <string name="buyText">團購</string>
    <string name="searchName"> 搜尋團購商品...</string>
    <string name="sendSearch">Go</string>
    <string name="buyCommodity">購買</string>
    <string name="loginGeneral">一般登入</string>
    <string name="loginStore">特約商店登入</string>
    <string name="userName">姓名</string>
    <string name="gender_text_view">性別</string>
    <string name="tel">手機號碼</string>
    <string name="address">地址</string>
    <string name="back">返回</string>
    <string name="confime_success">推薦成功!</string>
    <string name="confime_failed">推薦失敗</string>
    <string name="close">關閉視窗</string>
    <string name="confirm">輸入確認</string>
    <string name="myRecommendButton">已推薦次數</string>
    <string name="recommendNumberEX">請輸入推薦碼</string>
    <string name="lookMyRecommend">我的推薦碼</string>
    <string name="action_settings">Settings</string>
    <string name="hello_message">個人資料</string>
    <string name="age_text_view">年齡</string>
    <string name="interests">Interests</string>
    <string name="gender_male_button">男</string>
    <string name="gender_female_button">女</string>
    <string name="save_button">儲存</string>
    <string name="refresh_button">重整</string>
    <string name="ok_button">OK</string>
    <string name="alert_dialog_title">Profile</string>
    <string name="alert_dialog_success">儲存成功!</string>
    <string name="alert_dialog_failed">儲存失敗</string>
    <string name="openMap">周邊優惠</string>
    <string name="wheelWidget">地點搜尋</string>
    <string name="wheeltv">請選擇特約商店</string>
    <string name="logCompany">特約商店登入</string>
    <string name="storeAccount">帳號</string>
    <string name="storePassword">密碼</string>
    <string name="pushStore">推薦</string>
    <string name="store">商店</string>
    <string name="commodityName">商品</string>
    <string name="numberIndex">數量</string>
    <string name="totalPrice">總價</string>
    <string name="arrivalDate">到貨日期</string>
    <string name="arrivalTime">到貨時段</string>
    <string name="complete">完成交易</string>
    <string name="complete2">取消交易</string>
    <string name="ok">完成</string>
    <string name="cancel">取消</string>
    
    <string name="drawer_open">開啟</string>
    <string name="drawer_close">關閉</string>

    <string-array name="drawer_menu">
        <item>首頁</item>
        <item>我的購買紀錄</item>
        <item>設定</item>
        <item>精選/廣告推撥</item>
        <item>我的收藏</item>
        <item>粉絲團專頁</item>
        <item>關於我們</item>
    </string-array>

    <string name="action_search">團購搜尋</string>

    <style name="ButtonText">
        <item name="android:layout_width">wrap_content</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#000000</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textSize">20dp</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
        <item name="android:paddingLeft">15dp</item>
        <item name="android:paddingRight">15dp</item>
    </style>

    <style name="BuyText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#000000</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textSize">15dp</item>
        <item name="android:textStyle">bold</item>
        <item name="android:shadowColor">#9e9e9e</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>

</resources>