<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/wallpaper1" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recommendNumberEX"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/recommendNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="none" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/confime"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/list_commodity"
        android:text="@string/confirm" />

    <TextView
        android:id="@+id/say"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#FFF" />

    <Button
        android:id="@+id/close"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/list_commodity"
        android:text="@string/close" />

</LinearLayout>